# obs-studio

UI/: obs-app.cpp
frontend/: CMakeLists.txt  OBSApp.cpp
frontend/settings/: OBSBasicSettings.cpp
frontend/utility/: display-helpers.hpp
frontend/widgets/: OBSBasicPreview.cpp  OBSBasic_Preview.cpp
libobs/: obs-display.c  obs-video.c
libobs-d3d11/: d3d11-subsystem.cpp
libobs-d3d12/: CMakeLists.txt  d3d12-buffer.cpp  d3d12-descriptor-heap.cpp  d3d12-graphics-rootsignature.cpp  d3d12-indexbuffer.cpp  d3d12-pipelinestate.cpp  d3d12-rootsig-parameter.cpp  d3d12-samplerstate.cpp  d3d12-shader.cpp  d3d12-shaderprocessor.cpp  d3d12-stagesurf.cpp  d3d12-subsystem.cpp  d3d12-subsystem.hpp  d3d12-texture2d.cpp  d3d12-texture3d.cpp  d3d12-upload-buffer.cpp  d3d12-vertexbuffer.cpp  d3d12-zstencilbuffer.cpp
libobs-opengl/: gl-subsystem.c
libobs/cmake/: legacy.cmake
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics.c
plugins/win-mf-camera/: CMakeLists.txt  mf-camera.cpp  mf-camera.hpp
plugins/win-mf-camera/cmake/: legacy.cmake
plugins/win-mf-camera/data/locale/: af-ZA.ini  an-ES.ini  ar-SA.ini  be-BY.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  mn-MN.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  ro-RO.ini  ru-RU.ini  (+15 more)
